# UraniumOld

./: .gitignore  LICENSE  README.md
old_code/common/: base.h  buildnumber.h.in
old_code/engine/: CMakeLists.txt  buildnumber.c  buildnumber.h  commands.c  commands.h  console.c  console.h  debugpanel.c  debugpanel.h  defines.h  dynlib.c  engine.c  engine.h  fps.c  fps.h  gameui_engine.c  gameui_engine.h  msg.c  msg.h  umap.c  umap.h  variables.h
old_code/engine/audio/: audio.c  audio.h
old_code/engine/unused/: messages_wrapper.c  messages_wrapper.h
old_code/game/: CMakeLists.txt  collision.c  collision.h  commands.c  commands.h  defines.h  game.c  game.h  game_gameui.c  game_gameui.h  game_umap.c  game_umap.h  player.c  player.h
old_code/game/entities/: brush.c  brush.h  light.c  light.h  pushable.c  pushable.h
old_code/game/hud/: hud_armor.c  hud_armor.h  hud_crosshair.c  hud_crosshair.h  hud_health.c  hud_health.h
old_code/gameui/: CMakeLists.txt  button.c  button.h  gameui.c  gameui.h  gradientpanel.c  gradientpanel.h  imagepanel.c  imagepanel.h  label.c  label.h  panel.c  panel.h
old_code/inputsystem/: CMakeLists.txt  inputsystem.c  inputsystem.h
old_code/launcher/: CMakeLists.txt  dynlib.c  dynlib.h  launcher.c  launcher.h
old_code/materialsystem/: CMakeLists.txt  commands.c  commands.h  materialsystem.c  materialsystem.h
old_code/old_assets/maps/: house.umap  lighting.umap  main.umap  pushables.umap
old_code/old_assets/textures/dev/: devgray.umf  devgreen.umf  devpushable_mass1.umf  devpushable_mass3.umf  devpushable_mass5.umf  devpushable_mass7.umf  devpushable_mass9.umf  devred.umf
old_code/old_assets/textures/engine/: error.umf
old_code/old_assets/textures/ui/: background.umf  background_console.umf
src/: CMakeLists.txt  build
src/engine/: CMakeLists.txt  cl_main.c  cl_main.h  engine.c  engine.h  engine_main.c  engine_main.h  engine_messages.c  engine_messages.h  engine_pch.h  engine_window.c  engine_window.h  glad.c  sv_main.c  sv_main.h  variables.h
src/filesystem/: CMakeLists.txt  filesystem.c  filesystem.h
src/game/client/: CMakeLists.txt  client.c  client.h  client_pch.h
src/game/server/: CMakeLists.txt  server.c  server.h  server_pch.h
src/include/glad/: glad.h
src/inputsystem/: CMakeLists.txt  inputsystem.c  inputsystem.h  inputsystem_glfw.h
src/launcher/: CMakeLists.txt  main.c  main.h
src/stdlib/: CMakeLists.txt  messages.c  messages.h
